workshop-app/deploy/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workshop-gitops
  labels:
    app: gitops-workshop
